@@ -1,7 +1,7 @@
 /* StarPU --- Runtime system for heterogeneous multicore architectures.
  *
  * Copyright (C) 2011-2013,2015-2017                      Inria
- * Copyright (C) 2010-2017                                CNRS
+ * Copyright (C) 2010-2017, 2019                                CNRS
  * Copyright (C) 2009-2011,2013-2018                      Université de Bordeaux
  *
  * StarPU is free software; you can redistribute it and/or modify
@@ -479,6 +479,13 @@ The default value is <c>x86_64-k1om-linux</c>
 \anchor enable-openmp
 \addindex __configure__--enable-openmp
 Enable OpenMP Support (\ref OpenMPRuntimeSupport)
+</dd>
+
+<dt>--enable-cluster</dt>
+<dd>
+\anchor enable-cluster
+\addindex __configure__--enable-cluster
+Enable cluster Support (\ref ClusteringAMachine)
 </dd>
 
 </dl>
